--- a/Conf/config.ini
+++ b/Conf/config.ini
@@ -5,8 +5,8 @@
 tester = your name
 environment = debug
 versionCode = your version
-host = frontend-docker-pre2
-loginHost = frontend-docker-pre2/postLogin
+host = docker-pre2
+loginHost = docker-pre2/postLogin
 loginInfo = {"email": 'wangjuan@user.com',"password": '123456',"auth": 'admin'}
 
 [online_release]
@@ -14,8 +14,8 @@ loginInfo = {"email": 'wangjuan@user.com',"password": '123456',"auth": 'admin'}
 tester = xiao xi
 environment = release
 versionCode = v1.0
-host = frontend-docker-pre2
-loginHost = frontend-docker-pre2/postLogin
+host = docker-pre2
+loginHost = docker-pre2/postLogin
 loginInfo = {"email": 'wangjuan@user.com',"password": '123456',"auth": 'admin'}
 
 [mail]
